# sead_data_diff

./: .gitignore  .pylintrc  Makefile  bug.sql  pyproject.toml  requirements.txt
src/: config.py  differ.py  utility.py
tests/: config.yml  utility_test.py
